tests/lit/tcheck/info_02.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2026-2026 Intel Corporation

function F(x : array [1] of Integer)
begin
    Std::Info(1, "x = {x}");
    // CHECK: Type error: Error in format string: unsupported variable 'x : array [1] of Integer'
end
